--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
     "passlib[bcrypt]>=1.7.4",
+    "prometheus-client>=0.23.1",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
-    "starlette-exporter>=0.23.0",
 ]
 
 [dependency-groups]
